added Project Task layout to side menu

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <body>
         <div class="top-bar">
             <div class="top-bar-item-container">
-                <button class="top-menu-btn">Menu</button>
-                <button class="top-home-btn">Home</button>
+                <button class="top-menu-btn">MENU</button>
+                <button class="top-home-btn">HOME</button>
                 <input type="text" class="top-search-bar">
-                <button class="top-add-task-btn">Task</button>
-                <button class="top-productivity-btn">Prodo</button>
-                <button class="top-help-btn">Help</button>
-                <button class="top-notifications-btn">Notify</button>
-                <button class="top-settings-btn">Settings</button>
+                <button class="top-add-task-btn">TASK</button>
+                <button class="top-productivity-btn">PRODUCTIVITY</button>
+                <button class="top-help-btn">HELP</button>
+                <button class="top-notifications-btn">NOTIFICATIONS</button>
+                <button class="top-settings-btn">SETTINGS</button>
             </div>
         </div>
 
@@ -28,6 +28,11 @@
                         <p class="side-menu-item">Today</p>
                         <p class="side-menu-item">Upcoming</p>
                         <h4 class="side-menu-item">Projects</h4>
+                        <ul class="project-tasks">
+                            <li>TASK FOLDER ONE</li>
+                            <li>TASK FOLDER TWO</li>
+                            <li>TASK FOLDER THREE</li>
+                        </ul>
                     </nav>
                     
                 </div>
