Add Project input popup

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
                         <p class="side-menu-item">Today</p>
                         <p class="side-menu-item">Upcoming</p>
                         <h4 class="side-menu-item">Projects</h4>
+                        <div class="add-project-btn"><strong>+</strong> Add Project</div>
+                        <div class="project-input-popup">
+                            <input type="text">
+                            <button class="project-submit-btn">Add</button>
+                            <button class="project-cancel-btn">Cancel</button>
+                        </div>
                         <ul class="project-tasks">
                             <li>TASK FOLDER ONE</li>
                             <li>TASK FOLDER TWO</li>
