Added eventlistener to project add button

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                         <h4 class="side-menu-item">Projects</h4>
                         <div class="add-project-btn"><strong>+</strong> Add Project</div>
                         <div class="project-input-popup">
-                            <input type="text">
-                            <button class="project-submit-btn">Add</button>
+                            <input class="project-input" type="text">
+                            <button class="project-add-btn">Add</button>
                             <button class="project-cancel-btn">Cancel</button>
                         </div>
                         <ul class="project-tasks">
